Bug 105121 - Crash after editing query and closing query window
Summary: Crash after editing query and closing query window
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha0+
Hardware: All Linux (All)
: high critical
Assignee: Maxim Monastirsky
URL:
Whiteboard: target:5.4.0
Keywords: haveBacktrace
: 103926 104149 107781 108184 108229 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-01-05 11:23 UTC by Buovjaga
Modified: 2017-10-31 09:58 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
GDB trace of the crash with 5.4 master (30.77 KB, text/plain)
2017-01-05 11:23 UTC, Buovjaga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2017-01-05 11:23:57 UTC
Created attachment 130172 [details]
GDB trace of the crash with 5.4 master

1. Open attachment 130158 [details]
2. Go to Queries, right-click Query - Edit
3. Click the first unticked checkbox from the left
4. Close query window

Robert: can you confirm?

Arch Linux 64-bit, KDE Plasma 5
Version: 5.4.0.0.alpha0+
Build ID: 1a58cdf8af1aba52ce0a376666dd7d742234d7cf
CPU Threads: 8; OS Version: Linux 4.8; UI Render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on January 4th 2016
Comment 1 Robert Großkopf 2017-01-05 11:40:29 UTC
Could confirm this buggy behavior. Could be it is a special behavior, while there are functions, which doesn't work with Firebird. With HSQLDB you couldn't save such a query, which doesn't work.

My System:
Version: 5.4.0.0.alpha0+
Build ID: a3cf075880db31f77cd0550e0ee25eca931c6a40
CPU Threads: 4; OS Version: Linux 4.1; UI Render: default; VCL: kde4; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2017-01-05_01:21:50
Locale: de-DE (de_DE.UTF-8); Calc: group
Comment 2 Commit Notification 2017-01-05 12:13:13 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fae07692473f0e29e469b1da5d767fc9203dd22c

tdf#105121 Crash in GrabFocus during dispose

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Maxim Monastirsky 2017-10-11 09:31:32 UTC
*** Bug 103926 has been marked as a duplicate of this bug. ***
Comment 4 Xisco Faulí 2017-10-27 11:21:26 UTC
*** Bug 107781 has been marked as a duplicate of this bug. ***
Comment 5 Xisco Faulí 2017-10-27 11:21:39 UTC
*** Bug 104149 has been marked as a duplicate of this bug. ***
Comment 6 Xisco Faulí 2017-10-27 11:21:47 UTC
*** Bug 108184 has been marked as a duplicate of this bug. ***
Comment 7 Xisco Faulí 2017-10-27 11:21:51 UTC
*** Bug 108229 has been marked as a duplicate of this bug. ***