tdf#105121 Crash in GrabFocus during dispose

Change-Id: I03a001f5c670e0ca2c6d78fcf726ea5a46a93eab